# ecoretestlaunch

./: ecore2.sdf  ecore_launch.repos  package.xml  setup.cfg  setup.py
launch/: simulation.launch.py
